2015-09-03  Paul Eggert  <eggert@cs.ucla.edu>

	* gmm-utils.el (gmm-image-load-path-for-library):
	* gnus-art.el (gnus-boring-article-headers, gnus-split-methods):
	* gnus-registry.el (gnus-registry-split-strategy):
	* gnus-start.el (gnus-check-new-newsgroups):
	* gnus-sum.el (gnus-select-group-hook):
	* gnus-uu.el (gnus-uu-user-archive-rules):
	* gnus.el (gnus-message-archive-group, gnus-visual):
	* message.el (message-cite-style):
	* nnir.el (nnir-swish++-additional-switches)
	(nnir-swish-e-additional-switches, nnir-hyrex-additional-switches)
	(nnir-namazu-additional-switches, nnir-notmuch-additional-switches):
	* nnmail.el (nnmail-split-methods, nnmail-expiry-wait-function):
	* nntp.el (nntp-server-action-alist):
	* tls.el (tls-checktrust):
	Fix some more docstring etc. quoting problems.
	Mostly these fixes prevent the transliteration of apostrophes
	that should stay apostrophes.  Also, prefer curved quotes in
	Bahá’í proper names, as that’s the preferred Bahá’í style and
	these names are chock-full of non-ASCII characters anyway.

2015-09-02  Paul Eggert  <eggert@cs.ucla.edu>

	Escape ` and ' in doc
	* gnus-art.el (gnus-article-address-banner-alist)
	(gnus-face-properties-alist):
	* gnus-sum.el (gnus-newsgroup-variables):
	* nndiary.el (nndiary-reminders):
	* nnmail.el (nnmail-fancy-expiry-targets, nnmail-split-fancy):
	Escape apostrophes and grave accents in docstrings if they
	are supposed to stand for themselves and are not quotes.  Remove
	apostrophes from docstring examples like ‘'(calendar-nth-named-day
	-1 0 10 year)’ that confuse source code with data.  Do some other
	minor docstring fixups as well, e.g., insert a missing close
	quote.

2015-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-format-message):
	* tls.el (tls-format-message): Use defalias at the top level so as to
	make eval-and-compile unnecessary.  Thanks to Stefan Monnier.

	* gnus-sum.el (gnus-summary-search-article):